# proto2openapi

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: cli.yml  main.rs  openapi_gen.rs  prost_light.rs
