[package]
name = "proto2openapi"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost-build = "0.8.0"
openapiv3 = "0.5.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_yaml = "0.8.21"
prost-types = "0.8.0"
tempfile = "3"
prost = "0.8.0"
indexmap = "1.7.0"
multimap = "0.8.3"
itertools = "0.10.1"
regex = "1.5.4"
lazy_static = "1.4.0"
clap = { version = "2.33.3", features = ["yaml"] }
